--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "projectforintern",
   "version": "0.1.0",
   "private": true,
+  "proxy":"https://backendpfi.onrender.com",
   "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
